--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,20 @@
 PROJECT_NAME=minimal-provider-agent-market
 FOUNDATION_MODEL_NAME=gpt-4o
 
+# Add your OpenAI API key here
 OPENAI_API_KEY=
 
+# Add your Agent Market API key here
 MARKET_API_KEY=
 
+# Add your Github personal access token here
 GITHUB_PAT=
 
+# Maximum bid amount for proposals (default is 0.01)
 MAX_BID=0.01
+
+# Github username
+GITHUB_USERNAME=
+
+# Github email
+GITHUB_EMAIL=
