--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,10 @@ infrastructure/.terraform/*
 infrastructure/terraform.tfstate
 infrastructure/terraform.tfstate.backup
 .aider*
+
+# Deployment files
+deploy.sh
+
+.minimal
+
+infrastructure/
