--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-loguru==0.7.2
-boto3>=1.33.1
-pre-commit==4.0.1
-pydantic-settings==2.6.1
-ruff==0.8.0
-GitPython==3.1.43
 aider-chat>=0.65.1
-PyGithub==2.5.0
-httpx==0.27.2
 docker==7.1.0
+GitPython==3.1.43
+httpx==0.27.2
+loguru==0.7.2
+pydantic>=2.7.0
+pydantic-settings==2.6.1
+pre-commit==4.0.1
+PyGithub==2.5.0
+python-dotenv==1.0.1
+ruff==0.8.0
